deploy/k8s/control/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-client
  namespace: wolfpackcloud-control
spec:
  selector:
    app.kubernetes.io/name: control-client
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-client
  namespace: wolfpackcloud-control
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: control-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: control-client
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values: ["arm64"]
      containers:
        - name: nginx
          image: 10.43.50.10:5000/wolfpack-control-client:latest-arm64
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
